--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,11 @@
 	"require-dev": {
 		"mustangostang/spyc":           "dev-master",
 		"satooshi/php-coveralls":       "dev-master",
+		"netcommons/m17n":              "dev-master",
+		"netcommons/net-commons":       "dev-master",
+		"netcommons/roles":             "dev-master",
+		"netcommons/rooms":             "dev-master",
+		"netcommons/pages":             "dev-master",
 		"netcommons/users":             "dev-master"
 	},
 	"license": "NetCommons License",
