Add plugin manager

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
 		"netcommons/net-commons":       "dev-master",
 		"netcommons/rooms":             "dev-master",
 		"netcommons/pages":             "dev-master",
+		"netcommons/plugin-manager":    "dev-master",
 		"netcommons/users":             "dev-master"
 	},
 	"license": "NetCommons License",
