--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
 		}
 	},
 	"require": {
-		"cakephp/cakephp":              "~2.4",
-		"cakephp/debug_kit":            "~2.2",
 		"cakedc/migrations":            "~2.2",
-		"twbs/bootstrap":               "~3.1",
-		"components/jquery":            "~2.1"
+		"cakephp/cakephp":              "~2.6.9",
+		"cakephp/debug_kit":            "~2.2",
+		"components/jquery":            "~2.1",
+		"twbs/bootstrap":               "~3.1"
 	},
 	"require-dev": {
 		"mustangostang/spyc":           "dev-master",
