--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,8 @@
 	},
 	"require-dev": {
 		"mustangostang/spyc":           "dev-master",
-		"satooshi/php-coveralls":       "dev-master",
-		"netcommons/m17n":              "dev-master",
 		"netcommons/net-commons":       "dev-master",
-		"netcommons/rooms":             "dev-master",
-		"netcommons/pages":             "dev-master",
-		"netcommons/plugin-manager":    "dev-master",
-		"netcommons/users":             "dev-master"
+		"satooshi/php-coveralls":       "dev-master"
 	},
 	"license": "NetCommons License",
 	"authors": [
