Change license value
Packagistで以下エラーが発生したため
Importing branch master (dev-master)
Skipped branch master, Invalid package information:
License "NetCommons License" is not a valid SPDX license identifier, see
https://spdx.org/licenses/ if you use an open license.
If the software is closed-source, you may use "proprietary" as license.

--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,33 @@
 {
-	"name": "netcommons/roles",
-	"description": "Roles Plugin for NetCommons3",
-	"homepage": "http://www.netcommons.org/",
-	"extra": {
-		"installer-paths": {
-			"app/Plugin/{$name}": ["type:cakephp-plugin"]
-		}
-	},
-	"require": {
-		"cakedc/migrations":            "~2.2",
-		"netcommons/net-commons":       "@dev"
-	},
-	"license": "NetCommons License",
-	"authors": [
-		{
+    "name": "netcommons/roles",
+    "description": "Roles Plugin for NetCommons3",
+    "homepage": "http://www.netcommons.org/",
+    "extra": {
+        "installer-paths": {
+            "app/Plugin/{$name}": [
+                "type:cakephp-plugin"
+            ]
+        }
+    },
+    "require": {
+        "cakedc/migrations": "~2.2",
+        "netcommons/net-commons": "@dev"
+    },
+    "license": "LicenseRef-NetCommons",
+    "license-ref-net-commons": "https://raw.githubusercontent.com/NetCommons3/NetCommons3/master/license.txt",
+    "authors": [
+        {
             "name": "NetCommons Community",
             "homepage": "http://www.netcommons.org"
-		}
-	],
-	"type":        "cakephp-plugin",
-	"keywords":    ["roles","netcommons","cakephp2"],
-	"config": {
-		"vendor-dir": "vendors"
-	}
+        }
+    ],
+    "type": "cakephp-plugin",
+    "keywords": [
+        "roles",
+        "netcommons",
+        "cakephp2"
+    ],
+    "config": {
+        "vendor-dir": "vendors"
+    }
 }
